fix problem in Services part

--- a/index.html
+++ b/index.html
@@ -97,25 +97,25 @@
                 <section class="services__body">
                     <div class="service">
                         <span class="service__cover"></span>
-                        <img class="service__image" src="./image/service1.png" alt="">
+                        <img class="service__image" src="./image/coding-monitor.jpg" alt="">
                         <h4 class="sercive__name">Web Development</h4>
                         <img class="service__stars" src="./image/stars.png" alt="">
                     </div>
                     <div class="service">
                         <span class="service__cover"></span>
-                        <img class="service__image" src="./image/service2.png" alt="">
+                        <img class="service__image" src="./image/coding-monitor.jpg" alt="">
                         <h4 class="sercive__name">Web Designing</h4>
                         <img class="service__stars" src="./image/stars.png" alt="">
                     </div>
                     <div class="service">
                         <span class="service__cover"></span>
-                        <img class="service__image" src="./image/service3.png" alt="">
+                        <img class="service__image" src="./image/coding-monitor.jpg" alt="">
                         <h4 class="sercive__name">Database Management</h4>
                         <img class="service__stars" src="./image/stars.png" alt="">
                     </div>
                     <div class="service">
                         <span class="service__cover"></span>
-                        <img class="service__image" src="./image/service4.png" alt="">
+                        <img class="service__image" src="./image/coding-monitor.jpg" alt="">
                         <h4 class="sercive__name">SEO</h4>
                         <img class="service__stars" src="./image/stars.png" alt="">
                     </div>
